clusters/default/firefly/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefly-postgres
  namespace: firefly
  labels:
    app: firefly-postgres
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: firefly-postgres
  template:
    metadata:
      labels:
        app: firefly-postgres
    spec:
      securityContext:
        fsGroup: 999
      containers:
        - name: postgres
          image: postgres:16-alpine@sha256:cf78e76683b9ca8c5733cbbdce6c9262b45b6767934dd0a95e671f9a0fc20685
          imagePullPolicy: IfNotPresent
          ports:
            - name: pg
              containerPort: 5432
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
          livenessProbe:
            exec:
              command: [pg_isready, -U, firefly]
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            exec:
              command: [pg_isready, -U, firefly]
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 1000m
              memory: 512Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: firefly-postgres-pvc
