clusters/default/firefly/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: firefly-postgres
  namespace: firefly
  labels:
    app: firefly-postgres
spec:
  selector:
    app: firefly-postgres
  ports:
    - name: pg
      port: 5432
      targetPort: pg
      protocol: TCP
  type: ClusterIP
