clusters/default/firefly/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: firefly
  namespace: firefly
  labels:
    app: firefly
spec:
  selector:
    app: firefly
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  type: ClusterIP
