clusters/default/firefly/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: firefly
  namespace: firefly
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`firefly.${BASE_DOMAIN}`)
      kind: Rule
      services:
        - name: firefly
          port: 80
